--- a/src/doc/man/saquery.8.in
+++ b/src/doc/man/saquery.8.in
@@ -2,7 +2,7 @@
 .
 .TH SAQUERY 8 "@BUILD_DATE@" "" "Open IB Diagnostics"
 .SH NAME
-SAQUERY \- 
+saquery \- query InfiniBand subnet administration attributes
 .
 .nr rst2man-indent-level 0
 .
@@ -30,14 +30,13 @@ level margin: \\n[rst2man-indent\\n[rst2man-indent-level]]
 .\" new: \\n[rst2man-indent\\n[rst2man-indent-level]]
 .in \\n[rst2man-indent\\n[rst2man-indent-level]]u
 ..
-.SH QUERY INFINIBAND SUBNET ADMINISTRATION ATTRIBUTES
-.SS SYNOPSIS
+.SH SYNOPSIS
 .sp
 saquery [options] [<name> | <lid> | <guid>]
-.SS DESCRIPTION
+.SH DESCRIPTION
 .sp
 saquery issues the selected SA query. Node records are queried by default.
-.SS OPTIONS
+.SH OPTIONS
 .INDENT 0.0
 .TP
 .B \fB\-p\fP
@@ -297,7 +296,7 @@ This file maps GUIDs to more user friendly names.  See FILES section.
 Default: @IBDIAG_CONFIG_PATH@/ibdiag.conf
 .UNINDENT
 .UNINDENT
-.SS COMMON FILES
+.SH COMMON FILES
 .\" Common text for the config file
 .
 .SS CONFIG FILE
@@ -359,10 +358,10 @@ for the file location for your installation.
 .fi
 .UNINDENT
 .UNINDENT
-.SS DEPENDENCIES
+.SH DEPENDENCIES
 .sp
 OpenSM (or other running SM/SA), libosmcomp, libibumad, libibmad
-.SS AUTHORS
+.SH AUTHORS
 .INDENT 0.0
 .TP
 .B Ira Weiny
