--- a/src/doc/man/ibsysstat.8.in
+++ b/src/doc/man/ibsysstat.8.in
@@ -2,7 +2,7 @@
 .
 .TH IBSYSSTAT 8 "@BUILD_DATE@" "" "Open IB Diagnostics"
 .SH NAME
-IBSYSSTAT \- 
+ibsysstat \- system status on an InfiniBand address
 .
 .nr rst2man-indent-level 0
 .
@@ -30,16 +30,15 @@ level margin: \\n[rst2man-indent\\n[rst2man-indent-level]]
 .\" new: \\n[rst2man-indent\\n[rst2man-indent-level]]
 .in \\n[rst2man-indent\\n[rst2man-indent-level]]u
 ..
-.SH SYSTEM STATUS ON AN INFINIBAND ADDRESS
-.SS SYNOPSIS
+.SH SYNOPSIS
 .sp
 ibsysstat [options] <dest lid | guid> [<op>]
-.SS DESCRIPTION
+.SH DESCRIPTION
 .sp
 ibsysstat uses vendor mads to validate connectivity between IB nodes
 and obtain other information about the IB node. ibsysstat is run as
 client/server. Default is to run as client.
-.SS OPTIONS
+.SH OPTIONS
 .sp
 Current supported operations:
 .INDENT 0.0
@@ -165,7 +164,7 @@ May be used several times (\-vv or \-v \-v \-v)
 Default: @IBDIAG_CONFIG_PATH@/ibdiag.conf
 .UNINDENT
 .UNINDENT
-.SS FILES
+.SH FILES
 .\" Common text for the config file
 .
 .SS CONFIG FILE
@@ -174,7 +173,7 @@ Default: @IBDIAG_CONFIG_PATH@/ibdiag.conf
 .sp
 A global config file is provided to set some of the common options for all
 tools.  See supplied config file for details.
-.SS AUTHOR
+.SH AUTHOR
 .INDENT 0.0
 .TP
 .B Hal Rosenstock
